--- a/GYM/pages/bienvenido/bienvenido.html
+++ b/GYM/pages/bienvenido/bienvenido.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./images/LOGO NARANJA.png" />
+    <link rel="icon" type="image/svg+xml" href="../../images/LOGO NARANJA.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WORKOUT</title>
-  </head>
-  <body>
+</head>
+<body>
     <div id="app"></div>
-    <script type="module" src="./main.js"></script>
-  </body>
-</html>
+    <script type="module" src="./bienvenido.js"></script>
+</body>
+</html>       
