--- a/GYM/pages/clienteFijo/clienteFijo.html
+++ b/GYM/pages/clienteFijo/clienteFijo.html
@@ -5,9 +5,31 @@
     <link rel="icon" type="image/svg+xml" href="../../images/LOGO NARANJA.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WORKOUT</title>
+    <!--<script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script type="text/javascript">
+      function sendEmail(correo) {
+        Email.send({
+          Host: "smtp.gmail.com",
+          Username: "sender@email_address.com",
+          Password: "Enter your password",
+          To: 'receiver@email_address.com',
+          From: `${correo}`,
+          Subject: "Sending Email using javascript",
+          Body: "Well that was easy!!",
+          Attachments: [
+            {
+              name: "File_Name_with_Extension",
+              path: "Full Path of the file"
+            }]
+        })
+        .then(function (message) {
+          alert("Mail has been sent successfully")
+        });
+      }
+    </script>-->
 </head>
 <body>
     <div id="app"></div>
-    <script type="module" src="./clienteFijo.js"></script>
+    <script type="module" src="./clienteFijo.ts"></script>
 </body>
 </html>
